# DGP

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  util.h
src/hw1/: CMakeLists.txt  dijkstra.cpp  hw1.md  prim.cpp
src/hw2/: CMakeLists.txt  hw2.cpp  hw2.md
src/hw3/: CMakeLists.txt  hw3.cpp  hw3.md
src/hw4/: CMakeLists.txt  hw4.cpp  hw4.md
src/hw5/: hw5.md
src/hw6/: CMakeLists.txt  hw6.cpp  hw6.md
