add_executable(dijkstra dijkstra.cpp)
target_include_directories(dijkstra PRIVATE ${PROJECT_SOURCE_DIR}/external/pmp-library/src)
target_include_directories(dijkstra PRIVATE ${PROJECT_SOURCE_DIR}/external/pmp-library/external/imgui)
target_include_directories(dijkstra PRIVATE ${PROJECT_SOURCE_DIR}/external/pmp-library/external/eigen)
target_include_directories(dijkstra PRIVATE ${PROJECT_SOURCE_DIR}/external/pmp-library/external/glfw/include)
target_include_directories(dijkstra PRIVATE ${PROJECT_SOURCE_DIR}/external/pmp-library/external/glew/include)
target_link_libraries(dijkstra PRIVATE pmp_vis)
target_link_libraries(dijkstra PRIVATE spdlog::spdlog spdlog::spdlog_header_only)

add_executable(prim prim.cpp)
target_include_directories(prim PRIVATE ${PROJECT_SOURCE_DIR}/external/pmp-library/src)
target_include_directories(prim PRIVATE ${PROJECT_SOURCE_DIR}/external/pmp-library/external/imgui)
target_include_directories(prim PRIVATE ${PROJECT_SOURCE_DIR}/external/pmp-library/external/eigen)
target_include_directories(prim PRIVATE ${PROJECT_SOURCE_DIR}/external/pmp-library/external/glfw/include)
target_include_directories(prim PRIVATE ${PROJECT_SOURCE_DIR}/external/pmp-library/external/glew/include)
target_link_libraries(prim PRIVATE pmp_vis)
target_link_libraries(prim PRIVATE spdlog::spdlog spdlog::spdlog_header_only)