add_executable(hw1_dijkstra dijkstra.cpp)
target_include_directories(hw1_dijkstra PRIVATE ${PROJECT_SOURCE_DIR}/external/pmp-library/src)
target_include_directories(hw1_dijkstra PRIVATE ${PROJECT_SOURCE_DIR}/external/pmp-library/external/imgui)
target_include_directories(hw1_dijkstra PRIVATE ${PROJECT_SOURCE_DIR}/external/pmp-library/external/eigen)
target_include_directories(hw1_dijkstra PRIVATE ${PROJECT_SOURCE_DIR}/external/pmp-library/external/glfw/include)
target_include_directories(hw1_dijkstra PRIVATE ${PROJECT_SOURCE_DIR}/external/pmp-library/external/glew/include)
target_link_libraries(hw1_dijkstra PRIVATE pmp_vis)
target_link_libraries(hw1_dijkstra PRIVATE spdlog::spdlog spdlog::spdlog_header_only)

add_executable(hw1_prim prim.cpp)
target_include_directories(hw1_prim PRIVATE ${PROJECT_SOURCE_DIR}/external/pmp-library/src)
target_include_directories(hw1_prim PRIVATE ${PROJECT_SOURCE_DIR}/external/pmp-library/external/imgui)
target_include_directories(hw1_prim PRIVATE ${PROJECT_SOURCE_DIR}/external/pmp-library/external/eigen)
target_include_directories(hw1_prim PRIVATE ${PROJECT_SOURCE_DIR}/external/pmp-library/external/glfw/include)
target_include_directories(hw1_prim PRIVATE ${PROJECT_SOURCE_DIR}/external/pmp-library/external/glew/include)
target_link_libraries(hw1_prim PRIVATE pmp_vis)
target_link_libraries(hw1_prim PRIVATE spdlog::spdlog spdlog::spdlog_header_only)